// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render correctly 1`] = `
<React.Fragment>
  <ForwardRef
    menuAction={[Function]}
  />
  <NavDrawer
    closeFunc={[Function]}
    isOpen={false}
  />
  <Route
    exact={true}
    path="/"
    render={[Function]}
  />
  <Route
    component={[Function]}
    path="/about"
  />
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "Naked": [Function],
        "displayName": "WithStyles(FAQPage)",
        "options": Object {},
        "propTypes": Object {
          "classes": [Function],
          "innerRef": [Function],
        },
        "render": [Function],
      }
    }
    path="/faq"
  />
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "Naked": [Function],
        "displayName": "WithStyles(BugReportPage)",
        "options": Object {},
        "propTypes": Object {
          "classes": [Function],
          "innerRef": [Function],
        },
        "render": [Function],
      }
    }
    path="/report"
  />
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "Naked": [Function],
        "displayName": "WithStyles(ContactPage)",
        "options": Object {},
        "propTypes": Object {
          "classes": [Function],
          "innerRef": [Function],
        },
        "render": [Function],
      }
    }
    path="/contact"
  />
</React.Fragment>
`;

exports[`App should toggle navigation 1`] = `
<React.Fragment>
  <ForwardRef
    menuAction={[Function]}
  />
  <NavDrawer
    closeFunc={[Function]}
    isOpen={true}
  />
  <Route
    exact={true}
    path="/"
    render={[Function]}
  />
  <Route
    component={[Function]}
    path="/about"
  />
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "Naked": [Function],
        "displayName": "WithStyles(FAQPage)",
        "options": Object {},
        "propTypes": Object {
          "classes": [Function],
          "innerRef": [Function],
        },
        "render": [Function],
      }
    }
    path="/faq"
  />
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "Naked": [Function],
        "displayName": "WithStyles(BugReportPage)",
        "options": Object {},
        "propTypes": Object {
          "classes": [Function],
          "innerRef": [Function],
        },
        "render": [Function],
      }
    }
    path="/report"
  />
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "Naked": [Function],
        "displayName": "WithStyles(ContactPage)",
        "options": Object {},
        "propTypes": Object {
          "classes": [Function],
          "innerRef": [Function],
        },
        "render": [Function],
      }
    }
    path="/contact"
  />
</React.Fragment>
`;
